# ComputationalMath

./: .gitignore
Task1/: do_all.sh
Task1/archive/der_1/: note.md
Task2/: CMakeLists.txt  do_all.sh  main.c  note.md  solve.c  solve.h  tests.c
Task2/main.dSYM/Contents/Resources/DWARF/: main
Task3/: main  main.c
Task_1/: do_all.sh  graph_gen.py  main  main.c
Task_1/archive/der_2/: note.md
Task_1/archive/der_3/: note.md
Task_1/graphs/: fit_summary.csv
